changed this to 100% to try fix scrolling issue on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -22,12 +22,16 @@ h1 {
     color: $font-color;
 }
 
+html {
+    height:100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
 }
 
